Classroom: added individual lists for completed and not complete homework events

--- a/web/resources/styles/assignments.scss
+++ b/web/resources/styles/assignments.scss
@@ -258,3 +258,8 @@ form {
   @include button(green, 100px);
   margin-right: 100px;
 }
+
+.revokeAssignment {
+  @include button(red, 100px);
+  margin-right: 100px;
+}
