--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -17,6 +17,9 @@
     <script src="/static/scripts/thirdparty/jquery/dist/jquery.min.js"></script>
     <script src="/static/scripts/thirdparty/angular/angular.min.js"></script>
     <script src="/static/scripts/thirdparty/angular.ng-modules.js"></script>
+    <script type="text/javascript" 
+            src="/static/scripts/thirdparty/angular-cookies/angular-cookies.js">
+    </script>
     <script src="/static/scripts/csrf.js"></script>
     <script type="text/coffeescript" src="/static/scripts/syll.coffee"></script>
     <script type="text/javascript" src="/static/scripts/overlay.js"></script>
