Classroom: moved myschedule to a controller instead of a directive

--- a/web/templates/calendar/home.html
+++ b/web/templates/calendar/home.html
@@ -2,8 +2,7 @@
 
 {% block js%} 
 <script type="text/javascript" src="/static/scripts/thirdparty/underscore/underscore.js"/>
-<script type="text/javascript" 
-        src="/static/scripts/thirdparty/moment/min/moment-with-langs.min.js"/>
+<script type="text/javascript" src="/static/scripts/thirdparty/moment/moment.js"/>
 
 <script type="text/javascript" src="/static/scripts/thirdparty/moment-range/lib/moment-range.js"/>
 
@@ -35,7 +34,6 @@
       href="/static/scripts/thirdparty/ngQuickDate/dist/ng-quick-date.css" >
 </link>
 <link type="text/css" rel="stylesheet" href="/static/styles/fc.css" ></link>
-
 <link type="text/scss" rel="stylesheet" href="/static/styles/calendar.scss" ></link>
 {% endblock %}
 
