--- a/web/templates/myClasses/mySchedule.html
+++ b/web/templates/myClasses/mySchedule.html
@@ -3,7 +3,7 @@
     {{term.name}}&nbsp;{{term.start.year}}
   </span>
   
-  <div id="calendar">&nbsp;</div>
+  <div id="calendar" ui-calendar="weeklyCalendar" ng-model="events" >&nbsp;</div>
   
   <aside id="scheduleSelector">
     <div id="selectorTitle">
