Classroom: myschedule is now displayed using angular ui calendar

--- a/web/resources/styles/myClasses.scss
+++ b/web/resources/styles/myClasses.scss
@@ -33,6 +33,12 @@
   }
 }
 
+#calendar {
+  float: left;
+  background: white;
+  display: inline-block;
+  width: 400px;
+} 
 
 
 #myClassesScheduleGutter {
