Classroom: added the selected term to the schedule api

--- a/web/templates/myClasses/schedule.html
+++ b/web/templates/myClasses/schedule.html
@@ -30,7 +30,7 @@
 
 <span id="myScheduleContent" ng-controller="myScheduleCtrl">
   <span id="myScheduleHeader">
-    {{term.name}}&nbsp;{{term.start.year}}
+    {{title}}
   </span>
   
   <div id="calendar" ui-calendar="weeklyCalendar" ng-model="events" >&nbsp;</div>
