Classroom: added grades to api

--- a/web/templates/myClasses/grades.html
+++ b/web/templates/myClasses/grades.html
@@ -1,7 +1,7 @@
 {% extends "myClasses/home.html" %}
 
 {% block MChead %}
-    <script type='text/javascript' src='/resources/scripts/grades.js'></script>
+    <script type="text/javascript" src="/resources/scripts/grades.js"></script>
 {% endblock %}
 
 {% block MCbody %}
