Classroom: added requirements to grade api

--- a/web/templates/myClasses/grades.html
+++ b/web/templates/myClasses/grades.html
@@ -27,5 +27,17 @@
       </div>
   </div>
 </div>
+
+<div id="requirements">
+  <div id="requirementsHeader">
+    graduation requirements
+  </div>
+  <div class="requirementsList">
+    <div class="collegeRequirements" ng-repeat="college in colleges">
+      
+    </div>
+  </div>
+</div>
+
 {% endverbatim %}
 {% endblock %}
