Classroom: factored out major requirement serialization into a separate function

--- a/web/resources/styles/myClasses.scss
+++ b/web/resources/styles/myClasses.scss
@@ -201,12 +201,10 @@ td.scheduleSection {
 
 .gradesClassName {
   width: 300px;
-  display: inline-block;
   color: #0084c9;
 }
 
-.grade {
-  display: inline-block;
+.gradeLetter {
   border-left: #f4e0e0 solid 1px;
   border-right: #f4e0e0 solid 1px;
   padding-right: 10px;
