--- a/web/templates/myClasses/grades.html
+++ b/web/templates/myClasses/grades.html
@@ -22,7 +22,7 @@
   <div class="gradesYear" ng-repeat="(year, classes) in grades">
       <div class="yearTitle">{{year}}</div> 
       <div class="myGradesClass" ng-repeat="class in classes">
-          <span class="grade">{{class.grade.letter}}</span>
+          <span class="gradeLetter">{{class.grade.letter}}</span>
           <span class="gradesClassName">{{class.name}}</span>
       </div>
   </div>
