--- a/web/resources/styles/myClasses.scss
+++ b/web/resources/styles/myClasses.scss
@@ -1,3 +1,5 @@
+@import "base";
+
 #myClassesGutter {
   width: 100%;
   overflow: hidden;
@@ -341,36 +343,13 @@ td.scheduleSection {
   }
 }
 
+#requirementListFooter {
+  padding: 15px 0px;
+  text-align: center;
+}
+
 #declareGraduation {
-  font-size: 12px;
-  padding: 10px;
-  border-radius: 7px;
-  border: 1px solid #199424;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  margin: 15px 0px;
-  width: 200px;
-  font-weight: bold;
-  box-shadow: inset 0 1px 0 #62d573;
-  -moz-box-shadow: inset 0 1px 0 #62d573;
-  -webkit-box-shadow: inset 0 1px 0 #62d573;
-  background: #30bd40;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, #30bd40 0%, #22a12e 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #30bd40), color-stop(100%, #22a12e));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #30bd40 0%, #22a12e 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #30bd40 0%, #22a12e 100%);
-  /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #30bd40 0%, #22a12e 100%);
-  /* IE10+ */
-  background: linear-gradient(to bottom, #30bd40 0%, #22a12e 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#30bd40', endColorstr='#22a12e',GradientType=0 );
-  /* IE6-9 */
+  @include button(green, 200px);
 }
 
 #units {
