Frontend: directive template links are now absolute paths

--- a/web/templates/myClasses/grades.html
+++ b/web/templates/myClasses/grades.html
@@ -31,7 +31,7 @@
 
   <div id="requirements">
     <div id="requirementsHeader">
-      graduation requirements
+      Graduation Requirements
     </div>
     <div class="requirementsList">
       <!-- list all of the college GE's first -->
