--- a/web/templates/myClasses/schedule.html
+++ b/web/templates/myClasses/schedule.html
@@ -21,7 +21,7 @@
 <link type="text/scss" rel="stylesheet" href="/static/styles/myClasses.scss" ></link>
 {% endblock %}
 
-{% block appName %}, mySchedule{% endblock %}
+{% block appName %}, myClasses, mySchedule{% endblock %}
 
 {% block myClasses_content %}
 
