--- a/web/templates/calendar/home.html
+++ b/web/templates/calendar/home.html
@@ -3,7 +3,7 @@
 {% block js%} 
 <script type="text/javascript" src="/static/scripts/tooltipster.js"></script>
 <script type="text/javascript" src="/static/scripts/handlebars.js"></script>        
-<script type="text/javascript" src="/static/scripts/calendar.js"></script>        
+<script type="text/coffeescript" src="/static/scripts/calendar.coffee"></script>        
 {% endblock %}        
 
 {% block css %}        
