--- a/web/resources/styles/calendar.scss
+++ b/web/resources/styles/calendar.scss
@@ -357,6 +357,7 @@ a.file {
     background: red;
     padding: 10px 10px;
     margin-left: -20px;
+    margin-top: -6px;
     width: 80px;
     height: 18px;
     text-align: center;
