Classroom: implemented registrar/users frontend in coffeescript

--- a/web/templates/registrar/users/home.html
+++ b/web/templates/registrar/users/home.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block js %}
-            <script type="text/javascript" src="/static/scripts/registrar/users.js"></script>
             <script type="text/javascript" src="/static/scripts/watermark.js"></script>
             <script type="text/javascript" src="/static/scripts/dataTables/jquery.dataTables.min.js"></script>
             <script type="text/javascript" src="/static/scripts/handlebars.js"></script>
+            <script type="text/coffeescript" src="/static/scripts/registrar/users.coffee"></script>
 {% endblock %}
+
 {% block css %}           
 
             <link type="text/scss" rel="stylesheet" href="/static/styles/m2m.scss" ></link>
